--- a/index.html
+++ b/index.html
@@ -152,6 +152,56 @@
         </div>
     </section>
 
+       <section id="projects" class="projects-section">
+    <div class="container">
+        <h2 class="section-title centered">
+            <span class="title-line"></span>
+            Professional Projects
+        </h2>
+
+        <div class="projects-grid">
+
+            <!-- Project 1 -->
+            <div class="project-card" data-tilt>
+                <div class="project-content">
+                    <h3 class="project-title">Tailor Service Mobile App</h3>
+                    <p class="project-desc">
+                        A complete mobile app solution designed for tailoring services with features like order tracking, measurements, service catalogs, and user-friendly appointment booking.
+                    </p>
+                    <a href="https://www.figma.com/design/BdEMv4wgTLjUjDUAqCV0Eo/Tailor-Service-Mobile-App?node-id=0-1&p=f&t=raZ7X1h8cNBzstRP-0" 
+                       class="project-link" target="_blank">View Project ➜</a>
+                </div>
+            </div>
+
+            <!-- Project 2 -->
+            <div class="project-card" data-tilt>
+                <div class="project-content">
+                    <h3 class="project-title">Hospital Management UI</h3>
+                    <p class="project-desc">
+                        Designed an intuitive UI for hospital operations including appointment scheduling, patient details, doctor profiles, emergency assistance, and test result tracking.
+                    </p>
+                    <a href="https://www.figma.com/design/9guPv3ajoNcSao4mPuqZub/Hospital?t=raZ7X1h8cNBzstRP-0" 
+                       class="project-link" target="_blank">View Project ➜</a>
+                </div>
+            </div>
+
+            <!-- Project 3 -->
+            <div class="project-card" data-tilt>
+                    <div class="project-content">
+                    <h3 class="project-title">Website Design</h3>
+                    <p class="project-desc">
+                        A complete design system for client, including components, layouts, iconography, color tokens, and responsive UI guidelines.
+                    </p>
+                    <a href="https://www.figma.com/design/QCvPcirriPI0cR09QkKVQC/HBS-DESIGN?node-id=0-1&p=f&t=raZ7X1h8cNBzstRP-0" 
+                       class="project-link" target="_blank">View Project ➜</a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+    
+
     <section id="tools" class="tools-section">
         <div class="container">
             <h2 class="section-title centered">
