--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     <p class="project-desc">
                         A complete design system for client, including components, layouts, iconography, color tokens, and responsive UI guidelines.
                     </p>
-                    <a href="https://www.figma.com/design/QCvPcirriPI0cR09QkKVQC/HBS-DESIGN?node-id=0-1&p=f&t=raZ7X1h8cNBzstRP-0" 
+                    <a href="https://www.figma.com/design/QCvPcirriPI0cR09QkKVQC/HBS-DESIGN?t=raZ7X1h8cNBzstRP-0" 
                        class="project-link" target="_blank">View Project ➜</a>
                 </div>
             </div>
