--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <p class="project-desc">
                         A complete mobile app solution designed for tailoring services with features like order tracking, measurements, service catalogs, and user-friendly appointment booking.
                     </p>
-                    <a href="https://www.figma.com/design/BdEMv4wgTLjUjDUAqCV0Eo/Tailor-Service-Mobile-App?node-id=0-1&p=f&t=raZ7X1h8cNBzstRP-0" 
+                    <a href="https://www.figma.com/design/vULuaHefAl34pyEAboK9hf/Tailor--Side?node-id=0-1&p=f&t=K5XSgWeyP1xH7vdL-0" 
                        class="project-link" target="_blank">View Project ➜</a>
                 </div>
             </div>
