--- a/index.html
+++ b/index.html
@@ -151,8 +151,7 @@
             </div>
         </div>
     </section>
-
-       <section id="projects" class="projects-section">
+   <section id="projects" class="projects-section">
     <div class="container">
         <h2 class="section-title centered">
             <span class="title-line"></span>
@@ -180,7 +179,7 @@
                     <p class="project-desc">
                         Designed an intuitive UI for hospital operations including appointment scheduling, patient details, doctor profiles, emergency assistance, and test result tracking.
                     </p>
-                    <a href="https://www.figma.com/design/9guPv3ajoNcSao4mPuqZub/Hospital?t=raZ7X1h8cNBzstRP-0" 
+                    <a href="https://www.figma.com/design/pDE2awC2um68GQaNkXf0Zw/Hospital-Management?node-id=0-1&p=f&t=955IZ7CtzLruny7u-0" 
                        class="project-link" target="_blank">View Project ➜</a>
                 </div>
             </div>
@@ -192,7 +191,7 @@
                     <p class="project-desc">
                         A complete design system for client, including components, layouts, iconography, color tokens, and responsive UI guidelines.
                     </p>
-                    <a href="https://www.figma.com/design/QCvPcirriPI0cR09QkKVQC/HBS-DESIGN?t=raZ7X1h8cNBzstRP-0" 
+                    <a href="https://www.figma.com/design/bnkodnZ8mVA0tZLAdERTfH/Website-Design?t=955IZ7CtzLruny7u-0" 
                        class="project-link" target="_blank">View Project ➜</a>
                 </div>
             </div>
