--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <div class="container">
         <h2 class="section-title centered">
             <span class="title-line"></span>
-            Professional Projects
+            Projects
         </h2>
 
         <div class="projects-grid">
@@ -180,18 +180,6 @@
                         Designed an intuitive UI for hospital operations including appointment scheduling, patient details, doctor profiles, emergency assistance, and test result tracking.
                     </p>
                     <a href="https://www.figma.com/design/pDE2awC2um68GQaNkXf0Zw/Hospital-Management?node-id=0-1&p=f&t=955IZ7CtzLruny7u-0" 
-                       class="project-link" target="_blank">View Project ➜</a>
-                </div>
-            </div>
-
-            <!-- Project 3 -->
-            <div class="project-card" data-tilt>
-                    <div class="project-content">
-                    <h3 class="project-title">Website Design</h3>
-                    <p class="project-desc">
-                        A complete design system for client, including components, layouts, iconography, color tokens, and responsive UI guidelines.
-                    </p>
-                    <a href="https://www.figma.com/design/bnkodnZ8mVA0tZLAdERTfH/Website-Design?t=955IZ7CtzLruny7u-0" 
                        class="project-link" target="_blank">View Project ➜</a>
                 </div>
             </div>
