--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <div class="container">
         <h2 class="section-title centered">
             <span class="title-line"></span>
-            Projects
+            Professional Projects
         </h2>
 
         <div class="projects-grid">
@@ -165,10 +165,8 @@
                 <div class="project-content">
                     <h3 class="project-title">Tailor Service Mobile App</h3>
                     <p class="project-desc">
-                        A complete mobile app solution designed for tailoring services with features like order tracking, measurements, service catalogs, and user-friendly appointment booking.
+                        The Tailor Service Mobile App was designed to make tailoring services easier, faster, and more organized for both customers and tailors. The main purpose of the app is to help users book tailoring appointments, save and update their body measurements, track order progress, and explore tailoring services—all in one place. The goal was to replace the traditional offline process with a smooth digital experience that saves time and improves communication. The app includes three different access modes: user side, tailor side, and admin panel. On the user side, customers can browse services, schedule appointments, track orders, and chat directly with the tailor through the built-in messaging system. On the tailor side, tailors can manage customer measurements, update order status, communicate with customers, and access a dedicated wallet page for income tracking and savings. The admin panel helps manage accounts, monitor activity, review service listings, and ensure everything runs smoothly across the app. During the design process, I focused on creating a simple and easy-to-use interface. I kept the layout clean with clear buttons, readable text, and smooth navigation so even new users could understand the system quickly. After creating wireframes and prototypes, I tested the screens with potential users and made improvements based on their feedback—especially in areas like order tracking and chat interactions. This project taught me how to design for multiple user roles while maintaining clarity and consistency. The final result is a modern, user-friendly mobile app that improves communication, reduces manual work, and makes tailoring services more organized and efficient for everyone involved.
                     </p>
-                    <a href="https://www.figma.com/design/vULuaHefAl34pyEAboK9hf/Tailor--Side?node-id=0-1&p=f&t=K5XSgWeyP1xH7vdL-0" 
-                       class="project-link" target="_blank">View Project ➜</a>
                 </div>
             </div>
 
@@ -177,7 +175,7 @@
                 <div class="project-content">
                     <h3 class="project-title">Hospital Management UI</h3>
                     <p class="project-desc">
-                        Designed an intuitive UI for hospital operations including appointment scheduling, patient details, doctor profiles, emergency assistance, and test result tracking.
+                     The Hospital Management UI was designed to help hospitals handle their daily operations in a faster and more organized way. The system supports important tasks like booking patient appointments, checking doctor availability, managing medical records, and handling emergency cases. The main goal was to create a clean and easy-to-use interface that helps hospital staff work without confusion or delays. The system has two main user roles: Doctor Side and Patient Side. On the Doctor Side, doctors can view their appointment schedules, check patient details, update treatment information, and manage test reports. They also receive alerts for emergency cases so they can respond quickly. On the Patient Side, users can book appointments, see their upcoming visits, view doctor profiles, and access their medical records and test results in a simple and secure way. While designing the interface, I focused on making the layout clear and readable by using proper spacing, clean typography, and helpful icons. The dashboard was created to give each user a quick overview of all important information on a single screen. I tested the design to make sure users could easily find important features like emergency help and appointment requests.
                     </p>
                     <a href="https://www.figma.com/design/pDE2awC2um68GQaNkXf0Zw/Hospital-Management?node-id=0-1&p=f&t=955IZ7CtzLruny7u-0" 
                        class="project-link" target="_blank">View Project ➜</a>
