--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <h3 class="project-title">Tailor Service Mobile App</h3>
                     <p class="project-desc">
                     Rhythm – Music Application was designed to deliver a seamless and immersive music-listening experience in one intuitive platform. The app allows users to explore curated playlists, stream music, save favorites, and track listening history with ease. Rhythm features personalized recommendations and smart discovery to help users find music that matches their mood and taste. A clean navigation structure ensures smooth browsing across genres, artists, and albums. The design focuses on clarity, minimal visuals, and effortless interaction to keep the music at the center. Through wireframing, prototyping, and user testing, the interface was refined for better usability and flow. The final outcome is a modern, user-friendly music app that balances functionality, aesthetics, and an enjoyable listening experience.
-                    <link href="https://www.figma.com/design/gaqo0L40EhHepWbPZpiQpx/Untitled?node-id=0-1&p=f&t=2mbynRt4N4eUnYX8-0">
+                    <link href="https://www.figma.com/design/gaqo0L40EhHepWbPZpiQpx/Untitled?node-id=0-1&p=f&t=2mbynRt4N4eUnYX8-0"/>
                     </p>
                 </div>
             </div>
@@ -177,7 +177,7 @@
                     <h3 class="project-title">Hospital Management UI</h3>
                     <p class="project-desc">
                      Medicare is an Ayurvedic medicine website designed to provide natural remedies and wellness solutions in one place. Users can browse a wide range of products with detailed descriptions, ingredients, and dosage instructions. The site educates visitors about Ayurveda’s principles, holistic healing, and the brand’s authenticity. A blog section offers health tips, lifestyle advice, and seasonal care guides. Customers can easily contact support, book consultations, and get personalized recommendations. The website focuses on a clean, user-friendly interface that makes exploring Ayurvedic wellness simple and engaging.
-                     <link href="https://www.figma.com/design/xxIKXVLWlYas9dcG58Kjjm/Untitled?node-id=0-1&p=f&t=EUIJJXtSg8kQ6oVA-0">   
+                     <link href="https://www.figma.com/design/xxIKXVLWlYas9dcG58Kjjm/Untitled?node-id=0-1&p=f&t=EUIJJXtSg8kQ6oVA-0"/>   
                     </p>
                 </div>
             </div>
