--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    
     <style>
         /* This style makes the tool-badges work as links */
         .contact-links {
@@ -168,12 +167,7 @@
                     Rhythm – Music Application was designed to deliver a seamless and immersive music-listening experience in one intuitive platform. The app allows users to explore curated playlists, stream music, save favorites, and track listening history with ease. Rhythm features personalized recommendations and smart discovery to help users find music that matches their mood and taste. A clean navigation structure ensures smooth browsing across genres, artists, and albums. The design focuses on clarity, minimal visuals, and effortless interaction to keep the music at the center. Through wireframing, prototyping, and user testing, the interface was refined for better usability and flow. The final outcome is a modern, user-friendly music app that balances functionality, aesthetics, and an enjoyable listening experience.
                         
                  </p>
-                     <a href="https://www.figma.com/file/gaqo0L40EhHepWbPZpiQpx/Untitled?node-id=0%3A1"
-   target="_blank"
-   rel="noopener noreferrer"
-   class="project-link">
-   🔗 View Figma Design
-</a>
+                    <link href="https://www.figma.com/design/gaqo0L40EhHepWbPZpiQpx/Untitled?node-id=0-1&p=f&t=OoJDuySZpi6s6HmZ-0">
                 </div>
             </div>
 
