--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
                    class="project-link">
                 🔗 View Figma Design
                     </a>
+                </div>
             </div>
 </section>
     
