--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <div class="experience-card">
                 <div class="experience-header">
                     <div>
-                        <h3 class="experience-role">UI/UX Designer</h3>
+                        <h3 class="experience-role">Graphic Designer</h3>
                         <p class="experience-company">Hudsmer Business Solutions</p>
                     </div>
                     <div class="experience-duration">6 months</div>
